--- a/MoveSystem/Movies.Application/Movies.Application.csproj
+++ b/MoveSystem/Movies.Application/Movies.Application.csproj
@@ -10,4 +10,15 @@
     <ProjectReference Include="..\Movies.Domain\Movies.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Automapper\" />
+    <Folder Include="Behaviors\Validation\" />
+    <Folder Include="Contracts\Interface\" />
+    <Folder Include="Contracts\Services\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Extentions\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
