--- a/MoveSystem/Movies.Infrastructure/Movies.Infrastructure.csproj
+++ b/MoveSystem/Movies.Infrastructure/Movies.Infrastructure.csproj
@@ -15,10 +15,15 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Graph" Version="5.61.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Movies.Application\Movies.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
