--- a/MoveSystem/Movies.Application/Movies.Application.csproj
+++ b/MoveSystem/Movies.Application/Movies.Application.csproj
@@ -11,14 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Automapper\" />
     <Folder Include="Behaviors\Validation\" />
-    <Folder Include="Contracts\Interface\" />
-    <Folder Include="Contracts\Services\" />
-    <Folder Include="DTOs\" />
     <Folder Include="Enums\" />
     <Folder Include="Extentions\" />
-    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
   </ItemGroup>
 
 </Project>
